# Arminator

./: .gitignore  CMakeLists.txt  CMakeLists_standalone.txt  README.md  client_demo_script.sh  package.xml  test_queue_demo.py  virtual-device.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
arminator_driver/: CMakeLists.txt  package.xml
arminator_driver/configs/: servo_config.ini
arminator_driver/include/arminator_driver/: ArminatorNode.hpp  ServoConfiguration.hpp  positions.h  servoConfig.hpp
arminator_driver/src/: ArminatorNode.cpp  ServoConfiguration.cpp  main.cpp  servoConfig.cpp
arminator_driver/srv/: Estop.srv  MoveServo.srv  SetPosition.srv
config/: al5d_config.yaml
docs/: Command.md  Offsets.md  Ontwerp Eisen.md  TODO.md
docs/resources/: RobotArm.asta
examples/: basic_control.cpp  ros_client_example.py
high_level_driver/: CMakeLists.txt  package.xml
include/arminator/: al5d_controller.hpp  kinematics.hpp  serial_interface.hpp
launch/: arminator.launch.py
low_level_driver/: CMakeLists.txt  TODO.md  package.xml
low_level_driver/examples/: SerialTest.cpp
low_level_driver/include/: RobotArmDriver.hpp  SerialDriver.hpp
low_level_driver/include/robot_arm_driver/: RobotArmDriver.hpp  SerialDriver.hpp
low_level_driver/src/: RobotArmDriver.cpp  SerialDriver.cpp  SerialDriver.hpp
src/: al5d_controller.cpp  arminator_node.cpp  kinematics.cpp  serial_interface.cpp
test/: test_al5d_controller.cpp  test_standalone.cpp
